Virtual-Instances and kub-cluster

--- a/kubernetes-cluster/master.yml
+++ b/kubernetes-cluster/master.yml
@@ -37,6 +37,7 @@
         packages:
         - vim
         - bash-completion
+        - wget
 
     - name: source auto kubectl completion
       shell: |
