Virtual-Instances and kub-cluster

--- a/kubernetes-cluster/kube-dependencies.yml
+++ b/kubernetes-cluster/kube-dependencies.yml
@@ -10,6 +10,7 @@
    - name: start Docker
      service:
        name: docker
+       enabled: yes
        state: started
 
    - name: disable SELinux
