--- a/kubernetes-cluster/master.yml
+++ b/kubernetes-cluster/master.yml
@@ -27,3 +27,18 @@
       args:
         chdir: $HOME
         creates: pod_network_setup.txt
+
+    - name: yum install Bash completion and vim
+      become: yes
+      yum:
+        name: "{{ packages }}"
+        state: present
+      vars:
+        packages:
+        - vim
+        - bash-completion
+
+    - name: source auto kubectl completion
+      shell: |
+        echo "source <(kubectl completion bash)" >> ~/.bashrc
+        source <(kubectl completion bash)
