--- a/kubernetes-cluster/master.yml
+++ b/kubernetes-cluster/master.yml
@@ -42,3 +42,5 @@
       shell: |
         echo "source <(kubectl completion bash)" >> ~/.bashrc
         source <(kubectl completion bash)
+      args:
+        executable: /bin/bash
